salesforce-port/force-app/main/default/objects/Bank_Account__c/Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Account</label>
    <nameField><label>Account Name</label><type>Text</type></nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>