salesforce-port/force-app/main/default/objects/Bank_Account__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>