salesforce-port/force-app/main/default/objects/Bank_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <type>EncryptedText</type>
    <length>34</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
</CustomField>