salesforce-port/force-app/main/default/objects/Bank_Account__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Bank Accounts</relationshipLabel>
    <relationshipName>Owned_Bank_Accounts</relationshipName>
</CustomField>